force-app/main/default/objects/Period_Snapshot__c/Period_Snapshot__c.object-meta.xml
<CustomObject>
    <description>Point-in-time snapshot of a Projection captured when its Period_Close__c transitions to Closed. Stores Projected_At_Close and Actual_At_Close for forecast accuracy reporting.</description>
    <label>Period Snapshot</label>
    <nameField>
        <displayFormat>PS-{000000}</displayFormat>
        <label>Period Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Period Snapshots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>