force-app/main/default/objects/Period_Snapshot__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Period Snapshots</relationshipLabel>
    <relationshipName>Period_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>