force-app/main/default/objects/Period_Snapshot__c/fields/Actual_At_Close__c.field-meta.xml
<CustomField>
    <fullName>Actual_At_Close__c</fullName>
    <description>Snapshot of Projection__c.Actual_Amount__c captured at the moment the period was closed.</description>
    <label>Actual At Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>