force-app/main/default/objects/Period_Snapshot__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Period Snapshots</relationshipLabel>
    <relationshipName>Period_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>