force-app/main/default/objects/Period_Snapshot__c/fields/Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>Composite_Key__c</fullName>
    <description>System-managed unique key: PeriodCloseId|ProjectionId. Used as ExternalId for upsert on re-close.</description>
    <externalId>true</externalId>
    <label>Composite Key</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>