force-app/main/default/objects/Period_Snapshot__c/fields/Period_Close__c.field-meta.xml
<CustomField>
    <fullName>Period_Close__c</fullName>
    <label>Period Close</label>
    <referenceTo>Period_Close__c</referenceTo>
    <relationshipLabel>Period Snapshots</relationshipLabel>
    <relationshipName>Period_Snapshots</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <required>true</required>
    <type>MasterDetail</type>
</CustomField>