force-app/main/default/objects/Period_Snapshot__c/fields/Projected_At_Close__c.field-meta.xml
<CustomField>
    <fullName>Projected_At_Close__c</fullName>
    <label>Projected At Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>