force-app/main/default/objects/Period_Snapshot__c/fields/Projection__c.field-meta.xml
<CustomField>
    <fullName>Projection__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Projection</label>
    <referenceTo>Projection__c</referenceTo>
    <relationshipLabel>Period Snapshots</relationshipLabel>
    <relationshipName>Period_Snapshots</relationshipName>
    <type>Lookup</type>
</CustomField>