force-app/main/default/objects/Period_Snapshot__c/fields/Snapshot_Composite_Key__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Composite_Key__c</fullName>
    <description>System-managed unique key: PeriodCloseId|ProjectionId. Populated by PeriodCloseBatch. Used as ExternalId to prevent duplicate snapshots on re-close.</description>
    <externalId>true</externalId>
    <label>Snapshot Composite Key</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>