force-app/main/default/objects/Period_Snapshot__c/fields/Variance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Variance_Amount__c</fullName>
    <description>Actual_At_Close minus Projected_At_Close. Positive = over-delivered; negative = under-delivered.</description>
    <formula>Actual_At_Close__c - Projected_At_Close__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Variance Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>